Fixed word wrap bug on quiz buttons closes issue #35

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ background-color: #60cd60;
 }
 
 .quizButton{
-    width: 100%;
+    white-space: normal;
     padding: 15%;
     font-size: 25px;
     margin-bottom: 20px;
